1.0.0-rc2. ActionServletの追加。Integer.valueOf の利用。
git-svn-id: https://www.seasar.org/svn/sastruts/trunk/sa-struts-portlet@729 311f1561-e253-4dfb-a9fb-882cde7d7359